fixed horizontal scrollbar issue

--- a/src/components/InfoComponent/InfoComponent.css
+++ b/src/components/InfoComponent/InfoComponent.css
@@ -33,5 +33,6 @@ img {
   text-align: center;
 }
 .bottom-container {
-  padding: 20px 0 20px 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
